# cortex-cycle-budget

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  action.yml  pyproject.toml  release-please-config.json
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  cycle-analysis.yml  release.yml
docs/: architecture.md  config-schema.md  cortex-variants.md  cycle-analysis.schema.json  timing-model.md  troubleshooting.md  usage.md
examples/cortex-m33/: README.md  cycle-analysis.json  isr.c  isr.elf
examples/cortex-m7/: README.md  cycle-analysis.json  foc_kernel.c  foc_kernel.elf
examples/minimal/: README.md  control_loop.c  control_loop.elf  cycle-analysis.json
examples/multi-mode/: README.md  analyses.json  cycle-analysis-a.json  cycle-analysis-b.json  motor_modes.c  motor_modes.elf
src/cortex_cycle_budget/: __init__.py  __main__.py  analysis.py  cli_multi.py  cli_single.py  config.py  models.py  parser.py  reports.py  timing_model.py  tooling.py
tests/integration/: test_e2e_cli.py
tests/unit/: test_analysis.py  test_cli_single.py  test_config.py  test_parser.py  test_reports.py  test_timing_model.py
