[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "cortex-cycle-budget"
version = "0.2.0"
description = "Static cycle-count estimation for ARM Cortex-M (M0/M4/M7/M33) binaries."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
keywords = [
    "arm",
    "cortex-m",
    "cycle-count",
    "static-analysis",
    "embedded",
    "performance",
    "github-action",
]
authors = [
    { name = "cortex-cycle-budget contributors" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: Software Development :: Build Tools",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.5",
    "mypy>=1.8",
]

[project.scripts]
cortex-cycle-budget = "cortex_cycle_budget.cli_single:main"
cortex-cycle-budget-multi = "cortex_cycle_budget.cli_multi:main"

[project.urls]
Homepage = "https://github.com/your-org/cortex-cycle-budget"
Documentation = "https://github.com/your-org/cortex-cycle-budget/tree/main/docs"
Issues = "https://github.com/your-org/cortex-cycle-budget/issues"
Source = "https://github.com/your-org/cortex-cycle-budget"

[tool.hatch.build.targets.wheel]
packages = ["src/cortex_cycle_budget"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "tests/",
    "docs/",
    "examples/",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "action.yml",
]

[tool.pytest.ini_options]
minversion = "7.4"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "integration: tests requiring arm-none-eabi-gcc toolchain",
]

[tool.coverage.run]
source = ["src/cortex_cycle_budget"]
branch = true

[tool.coverage.report]
exclude_also = [
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
show_missing = true
skip_covered = false

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",        # pyflakes
    "I",        # isort
    "B",        # bugbear
    "UP",       # pyupgrade
    "SIM",      # flake8-simplify
    "RUF",      # ruff-specific
]
ignore = [
    "E501",     # line length handled by formatter
    "RUF012",   # mutable class attrs
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011", "RUF043"]
# Reports intentionally use en-dash and info glyphs in user-facing output.
"src/cortex_cycle_budget/cli_single.py" = ["RUF001"]
"src/cortex_cycle_budget/cli_multi.py" = ["RUF001"]
"src/cortex_cycle_budget/reports.py" = ["RUF001"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/cortex_cycle_budget"]
warn_unused_ignores = true
warn_redundant_casts = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true
